examples/neg/parsing/tail-pattern-too-early.effekt
val _ = [1, 2] match {
  case [..x, y] => 3
}